remove cross compilation but add jlink for building platform specific bundles.