@@ -7,6 +7,7 @@ plugins {
     id 'checkstyle'
     id 'com.github.ben-manes.versions' version '0.54.0'
     id 'org.owasp.dependencycheck' version '12.2.1'
+    id 'org.beryx.jlink' version '4.0.0'
 }
 
 group = 'dev.aisandbox'
@@ -33,9 +34,6 @@ application {
 javafx {
     version = '25.0.3'
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
-    if (System.properties.containsKey('env')) {
-        platform = System.properties['env']
-    }
 }
 
 javadoc {
@@ -148,6 +146,23 @@ test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
+    }
+}
+
+jlink {
+    options = ['--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'AISandbox-Server'
+        jvmArgs = [
+                '--sun-misc-unsafe-memory-access=allow',
+                '--enable-native-access=javafx.graphics,ALL-UNNAMED'
+        ]
+    }
+    mergedModule {
+        requires 'java.logging'
+        requires 'java.naming'
+        requires 'java.sql'
+        requires 'java.xml'
     }
 }
 
